--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
     <title>My Page</title>
   </head>
   <body>
-    <title> Maria's Webpage </title>
+    <h1>Maria's Webpage</h1>
   </body>
 </html>
