--- a/test.html
+++ b/test.html
@@ -5,5 +5,10 @@
   </head>
   <body>
     <h1>Maria's Webpage</h1>
+    <h2> My Favorite Foods</h2>
+    <ol>
+      <li>Pizza</li>
+    </ol>
+    <p>This is a Paragraph</p>
   </body>
 </html>
