--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>Maria's Webpage</h1>
-    <h2> My Favorite Foods</h2>
+    <h2> How to be pop punk</h2>
     <ol>
-      <li>Pizza</li>
+      <li>Eat nothing but Pizza for the rest of your life</li> <img src=https://s3.amazonaws.com/ODNUploads/5431304634badCheese_Pizza.jpg>
     </ol>
     <p>This is a Paragraph</p>
   </body>
